--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,8 @@ button{
 .smooth-transition{
   @apply transition-all ease-in-out duration-300
 }
+.addtoCart{
+  @apply flex items-center justify-center gap-2 font-semibold outline-Rose-300 
+  outline-2 bg-Rose-50 z-20 w-[145px] h-[40px] rounded-full absolute 
+  left-[20%] bottom-[-10%] text-[4vw] md:text-[0.65rem] xl:text-sm cursor-pointer hover:text-Red
+}
